Add todos and thoughts about the design

--- a/site/layout/workshop/index.html
+++ b/site/layout/workshop/index.html
@@ -355,6 +355,33 @@
   
 </li>
       
+        <li class="md-nav__item">
+  <a href="#general-stuff" class="md-nav__link">
+    <span class="md-ellipsis">
+      General stuff
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#inspiration-and-references" class="md-nav__link">
+    <span class="md-ellipsis">
+      Inspiration and references
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#stuff" class="md-nav__link">
+    <span class="md-ellipsis">
+      Stuff
+    </span>
+  </a>
+  
+</li>
+      
     </ul>
   
 </nav>
@@ -583,6 +610,28 @@
   
   
     <li class="md-nav__item">
+      <a href="../../glossary/" class="md-nav__link">
+        
+  
+  
+  <span class="md-ellipsis">
+    Glossary
+    
+  </span>
+  
+
+      </a>
+    </li>
+  
+
+    
+      
+      
+  
+  
+  
+  
+    <li class="md-nav__item">
       <a href="../../reference/" class="md-nav__link">
         
   
@@ -631,6 +680,33 @@
   
 </li>
       
+        <li class="md-nav__item">
+  <a href="#general-stuff" class="md-nav__link">
+    <span class="md-ellipsis">
+      General stuff
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#inspiration-and-references" class="md-nav__link">
+    <span class="md-ellipsis">
+      Inspiration and references
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#stuff" class="md-nav__link">
+    <span class="md-ellipsis">
+      Stuff
+    </span>
+  </a>
+  
+</li>
+      
     </ul>
   
 </nav>
@@ -647,8 +723,6 @@
 
 
 
-  <h1>Workshop</h1>
-
 <h2 id="workshop-garage">Workshop + Garage</h2>
 <ul>
 <li>The north side of the house is placed right at the end of the property, with the garage door exposed to the road, allowing car access to the workshop and garage. Concrete or cement floor, no grass or trees.
@@ -660,7 +734,128 @@
         At the workshop you'll need protection. Clothing that will make you warm. There are components sensitive to too much heat. Therefore we leave the coldest place for the workshop.</li>
 <li>The garage door open both the workshop and garage. They are the same room, with movable separator to protect the cars.
     !!! info "Flexible Access"
-        This allows to adjust for different amount of cars parked, and direct access from outside.</li>
+        This allows to adjust for different amount of cars parked, and direct access from outside.<a href="../../">Home</a></li>
+</ul>
+<h1 id="general-stuff">General stuff</h1>
+<p>Keep it flexible. Have vehicle access. Visualize section layout like an intestine (fractal). High surface area, easy user access while short distance.</p>
+<p>Noise absorption and beams to lift heavy objects on the ceiling.</p>
+<p>Dust extractor somewhere. Exit fumes or filter them? Some fumes have to go out. (3d printers, soldering, welding, machining, smoke, vapors, dust).</p>
+<p>Sound dampening at the ceiling</p>
+<ul>
+<li><strong>Materials</strong>: Custom shelving to store large flat, long, or many small pieces. Possibly with wheels. Right by the workshop door.</li>
+<li><strong>Main general stuff</strong>: Table near the home-workshop entrance, with shelves, pegboard, screw cabinet, and electronics stuff in upper level of table.<ul>
+<li>Small shelves with hooks and magnets at the outside border. Put lots of stuff in any way, and drawers (gavetas) on the shelves.</li>
+<li>Consider pegboard (perforated panel) for the tools.<ul>
+<li><a href="https://www.leroymerlin.es/fp/12101404/panel-portaherramientas-mottez-de-600-x-900-mm">Pegboard</a></li>
+<li><a href="https://www.amazon.es/TUPARKA-Ganchos-tablero-clavijas-ganchos/dp/B07T9YWGRW/ref=asc_df_B07T9YWGRW/?tag=googshopes-21&amp;linkCode=df0&amp;hvadid=435776500782&amp;hvpos=&amp;hvnetw=g&amp;hvrand=16025823885232695789&amp;hvpone=&amp;hvptwo=&amp;hvqmt=&amp;hvdev=c&amp;hvdvcmdl=&amp;hvlocint=&amp;hvlocphy=9047045&amp;hvtargid=pla-841724744773&amp;psc=1&amp;tag=&amp;ref=&amp;adgrpid=102930851642&amp;hvpone=&amp;hvptwo=&amp;hvadid=435776500782&amp;hvpos=&amp;hvnetw=g&amp;hvrand=16025823885232695789&amp;hvqmt=&amp;hvdev=c&amp;hvdvcmdl=&amp;hvlocint=&amp;hvlocphy=9047045&amp;hvtargid=pla-841724744773">hooks</a></li>
+</ul>
+</li>
+<li>Lots of plugs: (<strong>Type N</strong> (IEC 60906-1), Type F EU, Type A USA, Type G UK, USB-A, MicroUSB, <strong>USB-C</strong>) everywhere. 12 outlet power strips. <a href="https://www.leroymerlin.es/fp/82753541/base-multiple-de-8-tomas-2-usb-rj45-tv-de-2-metros-lexman">Power strip</a></li>
+<li><strong>Regions</strong><ul>
+<li>Safety: Gloves, glasses, masks, headsets, fire extinguisher, emergency kit</li>
+<li>General tools: Multi-Tool, Pliers, scissors, cutter, caliper, tape measure, soft tailor tape measure, stainless steel etched rulers, laser meter and thermometer, digital scale with solid base, bubble level, clamps, Snatch blocks</li>
+<li>Boxes (empty, stored)</li>
+<li>Bags</li>
+<li>Screws classified (bolt/screw, diameter, length,). Dedicated section, not just assortment box</li>
+<li>nuts, washers, nails, rivets, pop riveter</li>
+<li>Screwdrivers, Tips (full bit set + others mixed), electric compact drill with clutch, allen torx and other key sets (with standard keys that can be replaced), precision and tamper-proof set</li>
+<li>spanner set, adjustable wrench, ratchet socket wrench set</li>
+<li>recycling bin (Burn, Plastics, Paper, Toxic)</li>
+<li>Drill bits: steel/plastic, masonry, wood, countersink of all sizes, Dowels</li>
+<li>Hand drills, impact drivers</li>
+<li>Tapes</li>
+<li>Writing stuff box: mechanical pencil (Rotring Rapid PRO or Rotring 600) + with thick tip, white and black permanent markers, thick and thin, pens.</li>
+<li>3d printer cabinet or section of table, connected to power, dust extractor, etc.</li>
+</ul>
+</li>
+<li>HUGE cabinet with drawers with <a href="https://youtu.be/VntGnLuwoeY">Alexandre Chappel assortment boxes</a>, for relatively small items and possibly their tools. For bigger use gavetas in shelves.</li>
+</ul>
+</li>
+<li><strong>Metalwork</strong>:<ul>
+<li><strong>Lathe, milling machine, drill press</strong>, cnc mill, bench grinder (23-196), metal brake, plasma cutter?, Band Saw?, + their stuff.</li>
+<li>Shelving with Prep and etch, primer, cold blue, paint sprays, and + chemicals.</li>
+<li>Wire brush, sandpaper</li>
+<li>Welding table with the tanks, welders, tips and stuff.</li>
+</ul>
+</li>
+<li><strong>Woodwork</strong>:<ul>
+<li><strong>Table saw</strong> (instead of Track/circular/Drop/slide/miter/cutoff saw) + its stuff.</li>
+<li>Router with 10mm flush trim cutter, machinist square, foldable sawhorses, <strong>Jigsaw</strong>, ****Hole saw tips,</li>
+<li>Powered grinder and sander (mirka deros brushless with vacuum tube)</li>
+<li>Shelving with glues, Useful velcro, hot glue, epoxy, Cyanoacrylate (CA) glue (super glue, loctite), accelerator (catalyst), wood glues, tapes, and + chemicals.    </li>
+</ul>
+</li>
+<li>Electronics section<ul>
+<li>With soldering station</li>
+<li>Helping hands, fan to blow fumes, hot air gun, soldering paste, flux, tin, tips, tip cleaner brush, soldering iron, tin sucker, isopropyl alcohol bottle with rags, all in one place. Maybe build it.</li>
+<li>Scissors, cutters, </li>
+<li>Power source, multimeter, oscilloscope, current clamp meter, </li>
+<li>With components in assortment boxes</li>
+<li>SMD and DIP components, a drawer per component type (resistor, capacitor, inductor, fuse, LED, switch, transistor, mosfet, bjt, chip)</li>
+<li>Connectors, crimper, heat shrink</li>
+<li>Cables, Cable stripper</li>
+<li>Alligator clips,</li>
+</ul>
+</li>
+</ul>
+<h1 id="inspiration-and-references">Inspiration and references</h1>
+<p>PICTURES: <a href="https://photos.app.goo.gl/QmeuTi9Nkpnwhd9r6">https://photos.app.goo.gl/QmeuTi9Nkpnwhd9r6</a></p>
+<ul>
+<li>
+<p><strong>Tool box</strong>:</p>
+<ul>
+<li>I would choose 60mm grid</li>
+<li>Alexandre (?mm) <a href="https://www.youtube.com/watch?v=VntGnLuwoeY&amp;ab_channel=AlexandreChappel">3D Printing Assortment Boxes with a Case - Alexandre Chappel</a></li>
+<li>Gridfinity (42mm) <a href="https://youtu.be/ra_9zU-mnl8">https://youtu.be/ra_9zU-mnl8</a></li>
+</ul>
+<p>Drill bit storage in the same box system: <a href="https://youtu.be/OsLc76k4KeM">https://youtu.be/OsLc76k4KeM</a></p>
+<p>Other versions:
+- <a href="https://youtu.be/PYkl-JR1bSs">https://youtu.be/PYkl-JR1bSs</a>
+- <a href="https://www.thingiverse.com/thing:4638621">Drawer Boxes Customizer - Thingiverse</a>
+- <a href="https://cults3d.com/es/modelo-3d/herramientas/storage-box-ikea-hack-helmer">https://cults3d.com/es/modelo-3d/herramientas/storage-box-ikea-hack-helmer</a></p>
+</li>
+</ul>
+<h1 id="stuff">Stuff</h1>
+<ul>
+<li>Universal Standard tool batteries: Cordless Alliance System CAS. 48V?</li>
+<li><a href="https://youtu.be/6ps4vbQ6Tk0">Adam Savage's One Day Builds: Workshop Hardware Storage!</a></li>
+<li>Stuff Made here tool recommended tools<ul>
+<li><a href="https://amzn.to/2KlCb36">Wera allen keys 1000x better than el cheapos</a></li>
+<li><a href="https://amzn.to/2RQUxNG">Wera allen keys (english)</a></li>
+<li><a href="https://amzn.to/3ewHGtL">The best marker ever. Marks everything. Always in my pocket</a></li>
+<li><a href="https://amzn.to/2ypHmMU">Import spot welder. Cheap bulletproof</a></li>
+<li><a href="https://amzn.to/3eJstWy">Rivnuts + tool</a></li>
+<li><a href="https://amzn.to/2Vn6ZXL">Digital angle gauge</a></li>
+<li><a href="https://amzn.to/2XNfI7h">Bench sheet metal brake</a></li>
+<li><a href="https://amzn.to/3akCkhZ">Vise brake (highly recommend)</a></li>
+<li><a href="https://amzn.to/2xw4fhL">20 ton press brake</a></li>
+<li><a href="https://amzn.to/3cxrDdy">Cordless angle grinder - this thing will change your life</a></li>
+<li><a href="https://amzn.to/2wO855g">Dropped off ladder 20x and still going strong</a></li>
+<li><a href="https://amzn.to/2zfoyAv">Hypertherm powermax 45xp with machine torch</a></li>
+<li><a href="https://amzn.to/34SjMom">Hypertherm fine cut consumables (great for sheet metal)</a></li>
+</ul>
+</li>
+<li>Plumbing<ul>
+<li>Try UPONOR ProPEX, PEX-A with expansion fittings.</li>
+<li><a href="https://youtu.be/NEcsCt0lEzg">Toxicology: NSF certification standard.</a></li>
+</ul>
+</li>
+<li><a href="https://www.youtube.com/watch?v=7-djg27lJyQ">Great Scott Essential Tools</a></li>
+<li>Some of my favorite tools:<ul>
+<li><a href="https://amzn.to/2007Bj7">Track saw</a></li>
+<li><a href="https://amzn.to/2cKVxCr">Drill</a></li>
+<li><a href="https://amzn.to/2VZFGDP">Impact driver</a></li>
+<li><a href="https://amzn.to/2vQtbj1">Jigsaw</a></li>
+<li><a href="https://amzn.to/333Gzfy">Biscuit jointer</a></li>
+<li><a href="https://amzn.to/2QCLUMO">Japanese hand saw</a></li>
+<li><a href="https://amzn.to/2xg">Orbital sander</a></li>
+<li><a href="https://amzn.to/3b3QBKY">Mitre saw</a></li>
+</ul>
+</li>
+<li><a href="https://www.youtube.com/channel/UCe1Aj6VEO299Yq4WkXdoD3Q">Ideas and good standards from Alexandre Chappel YT channel</a></li>
+<li><a href="https://www.youtube.com/watch?v=5yuq34HQAdc&amp;ab_channel=TheEveningWoodworker">General design advice</a></li>
+<li><a href="https://youtu.be/4HHfWLQ-20w">Layout your workshop - Jeremy Fielding</a></li>
+<li><a href="https://youtu.be/6f52EUaRM1o?t=89">Cool voice-controlled organizer boxes electronics</a></li>
 </ul>
 
 
